--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Shop index
+{% block title %}Liste des centres rattachés au CGO
 {% endblock %}
 
 {% block body %}
-	<h1>Shop index</h1>
+	<h1 class="col-12 text-center my-5">Liste des centres rattachés au CGO</h1>
 
-	<table class="table">
+	<table class="table table-striped text-center align-middle">
 		<thead>
 			<tr>
-				<th>Id</th>
-				<th>Name</th>
+				<th>Nom du centre</th>
+				<th>Type de centre</th>
 				<th>Latitude</th>
 				<th>Longitude</th>
-				<th>IsOnLine</th>
-				<th>actions</th>
+				<th>Status</th>
+				<th></th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for shop in shops %}
 				<tr>
-					<td>{{ shop.id }}</td>
 					<td>{{ shop.name }}</td>
+					<td>{{ shop.type.type }}</td>
 					<td>{{ shop.latitude }}</td>
 					<td>{{ shop.longitude }}</td>
-					<td>{{ shop.isOnLine ? 'Yes' : 'No' }}</td>
+					<td>{{ shop.isOnLine ? '<span class="text-success text-uppercase">En ligne</span>' : '<span class="text-danger text-uppercase">Hors ligne</span>' }}</td>
 					<td>
 						<a class="btn btn-warning" href="{{ path('app_shop_edit', {'id': shop.id}) }}">Éditer</a>
 					</td>
