--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SiteController!{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1 class="col-12 text-center my-5">Tableau de bord</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/RENE/SITES/SYMFONY/CGO2/src/Controller/SiteController.php'|file_link(0) }}">src/Controller/SiteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/RENE/SITES/SYMFONY/CGO2/templates/site/index.html.twig'|file_link(0) }}">templates/site/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="row justify-content-center">
+        <div class="col-3 text-center">
+            <a class="btn btn-primary" href="#">Calcul distances</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btn-primary disabled" href="#">A venir...</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btn-primary disabled" href="#">A venir...</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btn-primary disabled" href="#">A venir...</a>
+        </div>
+    </div>
 {% endblock %}
