--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -8,7 +8,7 @@
 
     <div class="row justify-content-center">
         <div class="col-3 text-center">
-            <a class="btn btn-primary" href="#">Calcul distances</a>
+            <a class="btn btn-primary" href="{{ path('app_calcul_distances') }}">Calcul distances</a>
         </div>
         <div class="col-3 text-center">
             <a class="btn btn-primary disabled" href="#">A venir...</a>
