--- a/templates/admin_shop/edit.html.twig
+++ b/templates/admin_shop/edit.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Shop{% endblock %}
+{% block title %}Édition d'un centre{% endblock %}
 
 {% block body %}
-    <h1>Edit Shop</h1>
+    <h1 class="col-12 text-center my-5">Édition d'un centre</h1>
 
-    {{ include('admin_shop/_form.html.twig', {'button_label': 'Update'}) }}
+	<a class="btn btn-secondary mb-2" href="{{ path('app_admin_shop_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_admin_shop_index') }}">back to list</a>
+
+	<div class="row">
+		<div class="col-6 mx-auto">
+            {{ include('admin_shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+        </div>
+    </div>
 
     {{ include('admin_shop/_delete_form.html.twig') }}
 {% endblock %}
