autocomplete and departement liste ok

--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -13,7 +13,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mon CGO</a>
 						<div class="dropdown-menu">
-							<a class="dropdown-item" href="#">Liste des départements rattachés</a>
+							<a class="dropdown-item" href="{{ path('app_listeDepartementsOfCgo') }}">Liste des départements rattachés</a>
 							<a class="dropdown-item" href="{{ path('app_shop_index') }}">Liste des centres rattachés</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
