--- a/templates/type_of_shop/edit.html.twig
+++ b/templates/type_of_shop/edit.html.twig
@@ -9,5 +9,7 @@
 
     <a href="{{ path('app_type_of_shop_index') }}">back to list</a>
 
+    {{ include('type_of_shop/_tableColors.html.twig') }}
+
     {{ include('type_of_shop/_delete_form.html.twig') }}
 {% endblock %}
