--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -8,16 +8,16 @@
 
     <div class="row justify-content-center">
         <div class="col-3 text-center">
-            <a class="btn btn-primary" href="{{ path('app_calcul_distances') }}">Calcul distances</a>
+            <a class="btn btn-primary p-5" href="{{ path('app_calcul_distances') }}">TROUVER LE CENTRE<br/>LE PLUS PROCHE</a>
         </div>
         <div class="col-3 text-center">
-            <a class="btn btn-primary disabled" href="#">A venir...</a>
+            <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
         <div class="col-3 text-center">
-            <a class="btn btn-primary disabled" href="#">A venir...</a>
+            <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
         <div class="col-3 text-center">
-            <a class="btn btn-primary disabled" href="#">A venir...</a>
+            <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
     </div>
 {% endblock %}
