--- a/templates/site/departement/_form.html.twig
+++ b/templates/site/departement/_form.html.twig
@@ -2,9 +2,12 @@
 
     <div class="row justify-content-start">
         {% for departement in form.departements %}
-                <div class="form-check col-3 p-2 text-start">
-                        {{ form_widget(departement) }}
-                </div>
+            {% set index = departement.vars.value %}{# get array index #}
+            {% set entity = form.departements.vars.choices[index].data %}{# get entity object #}
+            <div class="col-11 mx-auto col-md-6 col-lg-4 col-xl-3 d-flex m-1">
+                <div class="me-2 col-1">{{ form_widget(departement) }}</div>{# render checkbox #}
+                <div class="col-11">{{ entity.departementCode }}: {{ entity.departementNomUppercase }}</div>
+            </div>
         {% endfor %}
     </div>
 
