--- a/templates/admin/cgo/edit.html.twig
+++ b/templates/admin/cgo/edit.html.twig
@@ -11,10 +11,10 @@
 
 	<div class="row">
 		<div class="col-6 mx-auto">
-			{{ include('admin_cgo/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			{{ include('admin/cgo/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 		</div>
 	</div>
 
 
-	{{ include('admin_cgo/_delete_form.html.twig') }}
+	{{ include('admin/cgo/_delete_form.html.twig') }}
 {% endblock %}
