--- a/templates/admin/cgo/new.html.twig
+++ b/templates/admin/cgo/new.html.twig
@@ -11,7 +11,7 @@
 
 	<div class="row mb-5">
 		<div class="col-6 mx-auto">
-			{{ include('admin_cgo/_form.html.twig') }}
+			{{ include('admin/cgo/_form.html.twig') }}
 		</div>
 	</div>
 
