--- a/templates/admin/shop/edit.html.twig
+++ b/templates/admin/shop/edit.html.twig
@@ -10,9 +10,9 @@
 
 	<div class="row">
 		<div class="col-6 mx-auto">
-            {{ include('admin_shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+            {{ include('admin/shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
         </div>
     </div>
 
-    {{ include('admin_shop/_delete_form.html.twig') }}
+    {{ include('admin/shop/_delete_form.html.twig') }}
 {% endblock %}
