--- a/templates/admin/type_of_shop/new.html.twig
+++ b/templates/admin/type_of_shop/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new TypeOfShop</h1>
 
-    {{ include('type_of_shop/_form.html.twig') }}
+    {{ include('admin/type_of_shop/_form.html.twig') }}
 
     <a href="{{ path('app_type_of_shop_index') }}">back to list</a>
 {% endblock %}
