--- a/templates/site/shop/edit.html.twig
+++ b/templates/site/shop/edit.html.twig
@@ -10,7 +10,7 @@
 
 	<div class="row">
 		<div class="col-6 mx-auto">
-			{{ include('shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			{{ include('site/shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 		</div>
 	</div>
 
