--- a/templates/admin/color_shop/index.html.twig
+++ b/templates/admin/color_shop/index.html.twig
@@ -3,26 +3,23 @@
 {% block title %}ColorShop index{% endblock %}
 
 {% block body %}
-    <h1>ColorShop index</h1>
+    <h1 class="col-12 my-5 text-center">ColorShop index</h1>
 
     <table class="table text-center align-middle">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Exemple</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
         {% for color_shop in color_shops %}
             <tr>
-                <td>{{ color_shop.id }}</td>
                 <td>{{ color_shop.name }}</td>
                 <td style="color:{{ color_shop.textColor }}; background-color:{{ color_shop.bgColor }};">TEXTE</td>
                 <td>
-                    <a href="{{ path('app_color_shop_show', {'id': color_shop.id}) }}">show</a>
-                    <a href="{{ path('app_color_shop_edit', {'id': color_shop.id}) }}">edit</a>
+                    <a class="btn btn-warning" href="{{ path('app_color_shop_edit', {'id': color_shop.id}) }}">Éditer</a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +30,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_color_shop_new') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('app_color_shop_new') }}">Créer une nouvelle couleur +</a>
 {% endblock %}
