--- a/templates/admin/shop/new.html.twig
+++ b/templates/admin/shop/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new Shop</h1>
 
-    {{ include('admin_shop/_form.html.twig') }}
+    {{ include('admin/shop/_form.html.twig') }}
 
     <a href="{{ path('app_admin_shop_index') }}">back to list</a>
 {% endblock %}
