--- a/templates/site/shop/new.html.twig
+++ b/templates/site/shop/new.html.twig
@@ -10,7 +10,7 @@
 
 	<div class="row">
 		<div class="col-6 mx-auto">
-            {{ include('shop/_form.html.twig') }}
+            {{ include('site/shop/_form.html.twig') }}
         </div>
     </div>
 
