add logo and favicon, robot.txt

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,39 @@
 body {
     background-color: lightgray;
 }
+
+.logoTop {
+    z-index: 2;
+    width: 13%;
+  }
+
+  // Extra small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { 
+    .logoTop {
+        width: 11%;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { 
+    .logoTop {
+        width: 10%;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .logoTop {
+        width: 9%;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .logoTop {
+        width: 8%;
+      }
+}
