--- a/templates/admin/color_shop/new.html.twig
+++ b/templates/admin/color_shop/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new ColorShop</h1>
 
-    {{ include('color_shop/_form.html.twig') }}
+    {{ include('admin/color_shop/_form.html.twig') }}
 
     <a href="{{ path('app_color_shop_index') }}">back to list</a>
 {% endblock %}
