--- a/templates/admin/color_shop/_form.html.twig
+++ b/templates/admin/color_shop/_form.html.twig
@@ -1,4 +1,16 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div class="mb-3">
+        <label class="form-label">{{form_label(form.name) }}</label>
+        {{form_widget(form.name, {'attr': {'class':'form-control'}}) }}
+    </div>
+    <div class="mb-3">
+        <label class="form-label">{{form_label(form.textColor) }}</label>
+        {{form_widget(form.textColor) }}
+    </div>
+    <div class="mb-3">
+        <label class="form-label">{{form_label(form.bgColor) }}</label>
+        {{form_widget(form.bgColor) }}
+    </div>
+    {{ form_rest(form) }}
+    <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
