--- a/templates/admin/color_shop/edit.html.twig
+++ b/templates/admin/color_shop/edit.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit ColorShop{% endblock %}
+{% block title %}Éditer un thème de couleur{% endblock %}
 
 {% block body %}
-    <h1>Edit ColorShop</h1>
+    <h1 class="col-12 text-center my-5">Éditer un thème de couleur</h1>
 
-    {{ include('admin/color_shop/_form.html.twig', {'button_label': 'Update'}) }}
+	<a class="btn btn-secondary mb-2" href="{{ path('app_color_shop_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_color_shop_index') }}">back to list</a>
+	<div class="row mb-5">
+        <div class="col-11 mx-auto text-center mb-4">
+            Exemple: <span class="badge" style="color:{{ color_shop.textColor }}; background-color:{{ color_shop.bgColor }};"> {{ color_shop.name }} </span>
+        </div>
+		<div class="col-6 mx-auto">
+            {{ include('admin/color_shop/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
+        </div>
+    </div>
 
-    {{ include('admin/color_shop/_delete_form.html.twig') }}
+
+    {# {{ include('admin/color_shop/_delete_form.html.twig') }} #}
 {% endblock %}
