--- a/templates/admin/type_of_shop/edit.html.twig
+++ b/templates/admin/type_of_shop/edit.html.twig
@@ -1,15 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit TypeOfShop{% endblock %}
+{% block title %}Édition d'un type de centre{% endblock %}
 
 {% block body %}
-    <h1>Edit TypeOfShop</h1>
+    <h1 class="col-12 text-center my-5">Édition d'un type de centre</h1>
 
-    {{ include('admin/type_of_shop/_form.html.twig', {'button_label': 'Update'}) }}
+	<a class="btn btn-secondary mb-2" href="{{ path('app_type_of_shop_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_type_of_shop_index') }}">back to list</a>
+	<div class="row mb-5">
+		<div class="col-6 mx-auto">
+            {{ include('admin/type_of_shop/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+        </div>
+    </div>
+    <div class="row border-top pt-4">
+        <div class="col-6 mx-auto text-end">
+            Thèmes de couleur:<br/>
+            <a class="h6" href="{{ path('app_color_shop_new') }}">Créer un nouveau thème</a>
+        </div>
+		<div class="col-6 mx-auto">
+            {{ include('admin/type_of_shop/_tableColors.html.twig') }}
 
-    {{ include('admin/type_of_shop/_tableColors.html.twig') }}
-
-    {{ include('admin/type_of_shop/_delete_form.html.twig') }}
+            {# {{ include('admin/type_of_shop/_delete_form.html.twig') }} #}
+        </div>
+    </div>
 {% endblock %}
