--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,8 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
 
+		<script src="https://kit.fontawesome.com/39dfe16fa3.js" crossorigin="anonymous"></script>
+
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -25,14 +27,17 @@
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
-	<body>
+	<body class="d-flex flex-column min-vh-100">
 
 		{% include "nav.html.twig" %}
 
 		{% include "flash_message.html.twig" %}
 
-		<div class="container"> {% block body %}{% endblock %}
-			</div>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-		</body>
-	</html>
+		<div class="container">
+			{% block body %}{% endblock %}
+		</div>
+
+		{% include "footer.html.twig" %}
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	</body>
+</html>
