--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary text-end">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="{{ path('app_calcul_distances') }}">
 			<img class="position-absolute logoTop border rounded bg-info" src="{{ asset('build/images/design/logo.png') }}" alt="Logo CGO-Helper">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
