--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post" class="col-4 mx-auto">
+	<form method="post" class="col-11 col-md-4 mx-auto">
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 		{% endif %}
@@ -19,14 +19,14 @@
 
 		<h1 class="my-5 col-12 text-center">Connexion</h1>
 
+
 		<label for="inputEmail">Identifiant / Email:</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
 		<label for="inputPassword">Mot de passe:</label>
 		<input type="password" name="password" id="inputPassword" class="form-control mb-3" autocomplete="current-password" required>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+</div>
 		{#
 																										        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
 																										        See https://symfony.com/doc/current/security/remember_me.html
@@ -38,7 +38,7 @@
 																										        </div>
 																										    #}
 
-		<button class="btn btn-lg btn-primary" type="submit">
+		<button class="col-11 mx-auto btn btn-lg btn-primary" type="submit">
 			Connexion
 		</button>
 	</form>
