--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -7,16 +7,16 @@
     <h1 class="col-12 text-center my-5">Tableau de bord</h1>
 
     <div class="row justify-content-center">
-        <div class="col-3 text-center">
+        <div class="col-10 mx-auto col-md-3 m-2 text-center">
             <a class="btn btn-primary p-5" href="{{ path('app_calcul_distances') }}">TROUVER LE CENTRE<br/>LE PLUS PROCHE</a>
         </div>
-        <div class="col-3 text-center">
+        <div class="col-10 mx-auto col-md-3 m-2 text-center">
             <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
-        <div class="col-3 text-center">
+        <div class="col-10 mx-auto col-md-3 m-2 text-center">
             <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
-        <div class="col-3 text-center">
+        <div class="col-10 mx-auto col-md-3 m-2 text-center">
             <a class="btn btn-dark disabled p-5" href="#">A venir<br/>...</a>
         </div>
     </div>
