--- a/templates/site/shop/_form.html.twig
+++ b/templates/site/shop/_form.html.twig
@@ -4,9 +4,9 @@
 
         <div class="col-12 my-3">{{ form_row(form.name) }}</div>
 
-        <div class="col-12 d-flex my-5">
-            <div class="col-6">{{ form_row(form.latitude) }}</div>
-            <div class="col-6">{{ form_row(form.longitude) }}</div>
+        <div class="col-12 d-flex flex-column my-5">
+            <div class="col-7">{{ form_row(form.latitude) }}</div>
+            <div class="col-7">{{ form_row(form.longitude) }}</div>
         </div>
         <div class="col-12 my-3">{{ form_row(form.type) }}</div>
         <div class="col-12 my-3">{{ form_row(form.isOnLine) }}</div>
