--- a/templates/site/shop/new.html.twig
+++ b/templates/site/shop/new.html.twig
@@ -9,7 +9,7 @@
 	<a class="btn btn-secondary mb-5" href="{{ path('app_shop_index') }}">Retour à la liste</a>
 
 	<div class="row">
-		<div class="col-6 mx-auto">
+		<div class="col-11 col-md-6 mx-auto">
             {{ include('site/shop/_form.html.twig') }}
         </div>
     </div>
