--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,45 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!
+{% block title %}Connexion
 {% endblock %}
 
 {% block body %}
-	<form method="post" class="col-11 col-md-4 mx-auto">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+	{% if error %}
+		<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
 
-		{% if app.user %}
-			<div class="mb-3">
-				Déjà connecté en tant que:
-				{{ app.user.userIdentifier }},
-				<a href="{{ path('app_logout') }}">Déconnexion</a>
-			</div>
-		{% endif %}
+	{% if app.user %}
+		<div class="mb-3">
+			Déjà connecté en tant que:
+			{{ app.user.userIdentifier }},
+			<a href="{{ path('app_logout') }}">Déconnexion</a>
+		</div>
+	{% endif %}
 
 		<h1 class="my-5 col-12 text-center">Connexion</h1>
 
+		<form method="post" class="col-11 col-md-4 mx-auto">
+			<div class="form-group text-center">
+				<label for="inputEmail">E-mail:</label>
+				<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3 text-center" autocomplete="email" required autofocus>
+			</div>
+			<div class="form-group text-center">
+				<label for="inputPassword">Mot de passe:</label>
+				<input type="password" name="password" id="inputPassword" class="form-control mb-3 text-center" autocomplete="current-password" required>
+			</div>
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-		<label for="inputEmail">Identifiant / Email:</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe:</label>
-		<input type="password" name="password" id="inputPassword" class="form-control mb-3" autocomplete="current-password" required>
+			<button type="submit" class="btn btn-primary">Connexion</button>
+		</form>
 
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-</div>
-		{#
-																										        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																										        See https://symfony.com/doc/current/security/remember_me.html
-																										
-																										        <div class="checkbox mb-3">
-																										            <label>
-																										                <input type="checkbox" name="_remember_me"> Remember me
-																										            </label>
-																										        </div>
-																										    #}
-
-		<button class="col-11 mx-auto btn btn-lg btn-primary" type="submit">
-			Connexion
-		</button>
-	</form>
 {% endblock %}
