--- a/templates/site/shop/index.html.twig
+++ b/templates/site/shop/index.html.twig
@@ -8,7 +8,7 @@
 
 	<div class="row justify-content-center justify-content-lg-start">
 		{% for shop in shops %}
-			<div class="col-11 col-md-6 col-lg-3 m-2">
+			<div class="col-11 col-md-6 col-lg-3 p-2">
 				<div class="card p-0 border-primary">
 					<div class="card-header">
 						{{ shop.name }} {{ shop.isOnLine ? '<i class="fa-solid fa-circle text-success"></i>' : '<i class="fa-solid fa-circle text-danger"></i>' }} <br/>
