--- a/templates/site/departement/_form.html.twig
+++ b/templates/site/departement/_form.html.twig
@@ -1,12 +1,10 @@
 {{ form_start(form) }}
 
-    <div class="row justify-content-start">
+    <div class="row justify-content-arround">
         {% for departement in form.departements %}
-            {% set index = departement.vars.value %}{# get array index #}
-            {% set entity = form.departements.vars.choices[index].data %}{# get entity object #}
-            <div class="col-11 mx-auto col-md-6 col-lg-4 col-xl-3 d-flex m-1">
-                <div class="me-2 col-1">{{ form_widget(departement) }}</div>{# render checkbox #}
-                <div class="col-11">{{ entity.departementCode }}: {{ entity.departementNomUppercase }}</div>
+            <div class="col-3">
+                <label for="exampleInputEmail1" class="form-label">{{ form_label(departement) }}</label>
+                {{ form_widget(departement) }}
             </div>
         {% endfor %}
     </div>
